syntax = "proto3";

package jonline;

enum Permission {
  PERMISSION_UNKNOWN = 0;

  CREATE_GROUPS = 1;
  GLOBALLY_PUBLISH_GROUPS = 2;

  VIEW_POSTS = 10;
  CREATE_POSTS = 11;
  GLOBALLY_PUBLISH_POSTS = 12;
  MODERATE_POSTS = 13;

  VIEW_EVENTS = 20;
  CREATE_EVENTS = 21;
  GLOBALLY_PUBLISH_EVENTS = 22;
  MODERATE_EVENTS = 23;

  GLOBALLY_PUBLISH_PROFILE = 999;
  // "Moderate users" refers to granting VIEW_POSTS, CREATE_POSTS, VIEW_EVENTS
  // and CREATE_EVENTS permissions to users.
  MODERATE_USERS = 1001;

  ADMIN = 10000;
  VIEW_PRIVATE_CONTACT_METHODS = 10001;
}
